--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "cool-react-hooks",
   "version": "1.0.0",
   "description": "A collection of cool hooks from various sources, or by me.",
+  "type": "module",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -23,6 +28,12 @@
   },
   "homepage": "https://github.com/cmbaughman/cool-react-hooks#readme",
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
@@ -32,7 +43,17 @@
     "jest-environment-jsdom": "^29.7.0",
     "react-dom": "^19.0.0",
     "react-test-renderer": "^19.0.0",
+    "rollup": "^4.31.0",
+    "semantic-release": "^24.2.1",
     "ts-jest": "^29.2.5",
+    "tslib": "^2.8.1",
     "typescript": "^5.7.3"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
