--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cool-react-hooks",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A collection of cool hooks from various sources, or by me.",
   "type": "module",
   "main": "dist/index.js",
@@ -10,9 +10,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "build": "npm run clean && rollup -c",
+    "clean": "rm -rf ./dist/*",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "semantic-release": "npx semantic-release"
   },
   "repository": {
     "type": "git",
@@ -38,9 +40,10 @@
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.7",
-    "@types/testing-library__react-hooks": "^3.4.1",
+    "@types/testing-library__react": "^10.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-test-renderer": "^19.0.0",
     "rollup": "^4.31.0",
