Updates to version

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "keywords": [
     "react"
   ],
-  "author": "various",
+  "author": "cmbdev <cmbdev@gmx.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cmbaughman/cool-react-hooks/issues"
