--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cool-react-hooks",
+  "name": "cmbdev-react-hooks",
   "version": "0.1.0",
   "description": "A collection of cool hooks from various sources, or by me.",
   "type": "module",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cmbaughman/cool-react-hooks.git"
+    "url": "git+https://github.com/cmbaughman/cmbdev-react-hooks.git"
   },
   "keywords": [
     "react"
@@ -26,9 +26,9 @@
   "author": "cmbdev <cmbdev@gmx.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cmbaughman/cool-react-hooks/issues"
+    "url": "https://github.com/cmbaughman/cmbdev-react-hooks/issues"
   },
-  "homepage": "https://github.com/cmbaughman/cool-react-hooks#readme",
+  "homepage": "https://github.com/cmbaughman/cmbdev-react-hooks#readme",
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
