Updated package name and versions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Release
 on:
   workflow_run:
-    workflows: ['cmbutil Security Check', 'Tests']
+    workflows: ['cmbdev-react-hooks Security Check', 'Tests']
     branches: [main]
     types:
       - completed
